--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
+/.idea/gradle.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 amm_sdk_sample/build
-.idea/
+/.idea
+tree_view_beta/build/
