--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url "http://172.16.18.63:8081/nexus/content/groups/public/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
@@ -19,6 +22,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "http://172.16.18.63:8081/nexus/content/groups/public/"
+        }
     }
 }
 
