--- a/statusBar/src/main/AndroidManifest.xml
+++ b/statusBar/src/main/AndroidManifest.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.james.tipsmoudle">
+    package="com.example.james.tipsmoudle">
 
-	<application
-		android:allowBackup="true"
-		android:icon="@mipmap/ic_launcher"
-		android:label="@string/app_name"
-		android:roundIcon="@mipmap/ic_launcher_round"
-		android:supportsRtl="true"
-		android:theme="@style/AppTheme">
-		<!--android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"-->
-		<activity android:name=".FlagActivity"
-		         >
-		</activity>
-		<activity android:name=".StatusBarCompleteActivity">
-		</activity>
-		<activity android:name=".StatusBarELMaActivity"/>
-		<activity android:name=".LauncherActivity">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <!--android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen"-->
+        <activity android:name=".FlagActivity"></activity>
+        <activity android:name=".StatusBarCompleteActivity"></activity>
+        <activity android:name=".StatusBarELMaActivity" />
+        <activity android:name=".StatusBarELMaFixWindowActivity" />
+        <activity android:name=".LauncherActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-				<category android:name="android.intent.category.LAUNCHER"/>
-			</intent-filter>
-		</activity>
-		<activity android:name=".StatusBarAndNavBarCompleteActivity"/>
-		<activity android:name=".StatusBarAndNavELMaActivity"/>
-		<activity android:name=".After19StatusBarAndNavCompleteActivity"/>
-
-
-	</application>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".StatusBarAndNavBarCompleteActivity" />
+        <activity android:name=".StatusBarAndNavELMaActivity" />
+        <activity android:name=".After19StatusBarAndNavCompleteActivity" />
+        <activity
+            android:name=".淡化SystemBarActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".隐藏StatusBarBelowFourActivity" />
+        <activity android:name=".隐藏StatusBarAfterFourActivity" />
+    </application>
 
 </manifest>
