setStatusBarColor 不能设置FLAG_TRANSLUCENT_STATUS（会设置View .SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN，View.SYSTEM_UI_FLAG_LAYOUT_STABLE），所以换个思路就是用手动通过setSystemUiVisibility设置这两个标志位

--- a/statusBar/src/main/AndroidManifest.xml
+++ b/statusBar/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         <activity android:name=".隐藏StatusBarAfterFourActivity" />
         <activity android:name=".StatusBarThemeActivity"
             android:theme="@style/MyAppTheme"></activity>
+        <activity android:name=".StatusBarDrawsBarBackgroudActivity"
+           ></activity>
     </application>
 
 </manifest>
