--- a/statusBar/build.gradle
+++ b/statusBar/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation ("com.r0adkll:slidableactivity:2.0.5"){
         exclude group: 'com.android.support'
     }
+    implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
