--- a/immersionbar-sample/src/main/AndroidManifest.xml
+++ b/immersionbar-sample/src/main/AndroidManifest.xml
@@ -111,6 +111,7 @@
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.gyf.immersionbar.sample.activity.KeyBoardActivity"
+            android:windowSoftInputMode="adjustResize"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation" />
         <activity
             android:name="com.gyf.immersionbar.sample.activity.CoordinatorActivity"
