--- a/statusBar/build.gradle
+++ b/statusBar/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
@@ -24,7 +26,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
-    implementation ("com.r0adkll:slidableactivity:2.0.5"){
+    implementation("com.r0adkll:slidableactivity:2.0.5") {
         exclude group: 'com.android.support'
     }
 //    implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
@@ -32,4 +34,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(path: ':immersionbar')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
