--- a/immersionbar-sample/src/main/AndroidManifest.xml
+++ b/immersionbar-sample/src/main/AndroidManifest.xml
@@ -143,6 +143,7 @@
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation|keyboardHidden" />
         <activity
             android:name="com.gyf.immersionbar.sample.activity.WebActivity"
+            android:windowSoftInputMode="adjustPan"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation|keyboardHidden" />
         <activity
             android:name="com.gyf.immersionbar.sample.activity.DialogActivity"
