--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,4 @@ include ':statusBar', ':tree_view_beta', ':nexuslibrary', ':constraintlayoutdemo
 include  ':immersionbar', ':immersionbar-components', ':immersionbar-ktx', ':immersionbar-sample'
 include ':amm_sdk_sample'
 include ':transitiondemo'
-include ':baselibrary'
+include ':basejumplibrary'
