--- a/transitiondemo/src/main/AndroidManifest.xml
+++ b/transitiondemo/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ExampleActivity"></activity>
+        <activity android:name=".TransitionActivity"></activity>
+        <activity android:name=".FragmentCustomAnimationsActivity"></activity>
     </application>
 
 </manifest>
